<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/imgProfileInbox"
        android:src="@drawable/profile_pic"
        />

    <TextView
        android:id="@+id/txtUserNameInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_user_name"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgProfileInbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtItemNameInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_item_title"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtUserNameInbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTimeInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="2 min ago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtItemNameInbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMsgDetailInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_inbox_detail"
        app:layout_constraintStart_toEndOf="@+id/imgProfileInbox"
        app:layout_constraintTop_toBottomOf="@+id/txtUserNameInbox" />

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/imgTypeInbox"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_stacks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMsgDetailInbox" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="#bab8b8"
        app:layout_constraintTop_toBottomOf="@+id/imgTypeInbox"
        />

</android.support.constraint.ConstraintLayout>